methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: not found: value bruchDown
    bruchDown()
    ^