methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  do {
    bruchDown()
    forward()
    backward()
    if (getGroundColor() != Color.green) {
      left()
    }
    if (isFacingWall()){
      left()
    }
  }while (isOverBaggle() == false)
  return true
}